Migrated entire backend to .NET 9.0. Not tested.

--- a/Login-and-Registration-Backend-.NET-/appsettings.json
+++ b/Login-and-Registration-Backend-.NET-/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "your-super-secret-key-that-is-at-least-32-characters-long",
+    "Issuer": "your-app-name",
+    "Audience": "your-app-users"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "your-google-client-id",
+      "ClientSecret": "your-google-client-secret"
+    },
+    "Microsoft": {
+      "ClientId": "your-microsoft-client-id",
+      "ClientSecret": "your-microsoft-client-secret"
+    }
+  },
+  "ConnectionStrings": {
+	"DefaultConnection": "Server=localhost;Database=YourDatabaseName;User Id=your-username;Password=your-password;"
+  }
 }
