Switched to SQLite

--- a/Login-and-Registration-Backend-.NET-/appsettings.json
+++ b/Login-and-Registration-Backend-.NET-/appsettings.json
@@ -22,6 +22,6 @@
     }
   },
   "ConnectionStrings": {
-	"DefaultConnection": "Server=localhost;Database=YourDatabaseName;User Id=your-username;Password=your-password;"
+    "DefaultConnection": "Data Source=auth.db;"
   }
 }
