--- a/Login-and-Registration-Backend-.NET-/appsettings.json
+++ b/Login-and-Registration-Backend-.NET-/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "your-super-secret-key-that-is-at-least-32-characters-long",
-    "Issuer": "your-app-name",
-    "Audience": "your-app-users"
+    "Key": "this-is-a-very-long-and-secure-secret-key-for-jwt-token-generation-at-least-32-characters-long",
+    "Issuer": "LoginRegistrationAPI",
+    "Audience": "LoginRegistrationUsers"
   },
   "Authentication": {
     "Google": {
