Added google client id and secret

--- a/Login-and-Registration-Backend-.NET-/appsettings.json
+++ b/Login-and-Registration-Backend-.NET-/appsettings.json
@@ -13,8 +13,8 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "your-google-client-id",
-      "ClientSecret": "your-google-client-secret"
+        "ClientId": "929125347264-4qqu0f9ogmt2d8slnhfgqnbrf5v6l4p0.apps.googleusercontent.com",
+        "ClientSecret": "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"
     },
     "Microsoft": {
       "ClientId": "your-microsoft-client-id",
