Apparently doing it like this is better.

--- a/Login-and-Registration-Backend-.NET-/appsettings.json
+++ b/Login-and-Registration-Backend-.NET-/appsettings.json
@@ -2,19 +2,21 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "this-is-a-very-long-and-secure-secret-key-for-jwt-token-generation-at-least-32-characters-long",
     "Issuer": "LoginRegistrationAPI",
-    "Audience": "LoginRegistrationUsers"
+    "Audience": "LoginRegistrationUsers",
+    "ExpiryInHours": 24
   },
   "Authentication": {
     "Google": {
-        "ClientId": "your-google-client-id",
-        "ClientSecret": "your-google-client-secret"
+      "ClientId": "your-google-client-id",
+      "ClientSecret": "your-google-client-secret"
     },
     "Microsoft": {
       "ClientId": "your-microsoft-client-id",
@@ -23,5 +25,14 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=auth.db;"
+  },
+  "Frontend": {
+    "DevelopmentUrl": "http://localhost:5174",
+    "ProductionUrl": "https://yourdomain.com"
+  },
+  "Features": {
+    "EnablePasswordReset": true,
+    "EnableEmailConfirmation": false,
+    "EnableUserRegistration": true
   }
 }
